fixed text align of info alert

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -327,6 +327,7 @@ a {
     width: 90%;
     font-size: clamp(1vw, 17px, 20px);
     position: absolute;
+    text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-left: auto;
     margin-right: auto;
@@ -687,6 +688,7 @@ a {
         width: 80%;
         font-size: clamp(1vw, 18px, 22px);
         position: absolute;
+        text-align: center;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         margin-left: auto;
         margin-right: auto;
